<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Laiba Noor Ali</string>
    <string name="nav_header_subtitle">laibanoorali803@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Archive</string>
    <string name="action_settings2">Exit</string>

    <string name="menu_home">Home</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_outbox">Outbox</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_trash">Trash</string>
    <string name="image">profile pic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gmail">gmailicon</string>
    <string name="extras">Extras</string>
</resources>