<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.navigationdrawer.ui.inbox.InboxFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/nav_drafts"
        android:name="com.example.navigationdrawer.ui.drafts.DraftsFragment"
        android:label="@string/menu_outbox"
        tools:layout="@layout/fragment_drafts" />

    <fragment
        android:id="@+id/nav_outbox"
        android:name="com.example.navigationdrawer.ui.outbox.OutboxFragment"
        android:label="@string/menu_outbox"
        tools:layout="@layout/fragment_outbox" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.example.navigationdrawer.ui.trash.TrashFragment"
        android:label="@string/menu_trash"
        tools:layout="@layout/fragment_trash" />

</navigation>